--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </nav>
     <div class="content">
         <img src="image1.png" style="width: 1530px; height: 520px; z-index: 1;">
-        <div class="text" style="z-index: 2;">
+        <div style="z-index: 2;">
             <h1>Cheer Loud, Cheer Proud
                 Get Your Tickets Today!</h1>
             <button>BUY NOW </button>
         </div>
     </div>
     <div class="box">
-        <h2 style="margin-left: 200px;">Chase down all targets relentlessly #Manjappada</h2>
+        <h2 style="margin-left: 290px;">Chase down all targets relentlessly #Manjappada</h2>
     </div>
     <h2 style="margin-left: 43rem; font-size: 28px; font-family: 'Times New Roman', Times, serif;">TEAM</h2> <br>
     <!--GoalKeepers-->
@@ -359,7 +359,7 @@
         </table>
         <br> <br>
     </div>
-    <h2 style="margin-left: 43rem; padding-top: 3rem; color: rgb(0, 0, 0); font-size: 24px;"> FAN ZONE</h2>
+    <h2 style="margin-left: 43rem; padding-top: 3rem; color: rgb(0, 0, 0); font-size: 26px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> FAN ZONE</h2>
     <div class="fan">
         <img src="fan.png">
         <p style="margin-left: 2rem; font-size: 28px; width: 50%; margin-top: 9rem;">Hey dedicated fans! Don't miss out
