--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <div class="content">
-        <img src="image1.png" style="width: 1530px; height: 520px; z-index: 1;">
+        <img src="images/image1.png" style="width: 1530px; height: 520px; z-index: 1;">
         <div style="z-index: 2;">
             <h1>Cheer Loud, Cheer Proud
                 Get Your Tickets Today!</h1>
@@ -38,25 +38,25 @@
     <h2 style="margin-left: 7rem; font-size: 24px; font-family: 'Times New Roman', Times, serif;"> GOALKEEPERS</h2>
     <div class="team-container">
         <div class="team-box">
-            <img src="player1.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player1.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">KARANJIT SINGH PARMAR</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="player2.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player2.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">LARA SHARMA</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="player3.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player3.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">MOHAMMED ARBAZ</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="player4.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player4.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">SACHIN SURESH</p>
             </div>
@@ -70,28 +70,28 @@
     <h2 style="margin-left: 4rem; font-size: 24px; font-family: 'Times New Roman', Times, serif;"> DEFENDERS</h2>
     <div class="team-container">
         <div class="team-box">
-            <img src="player5.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player5.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">AIBANBHA KUPAR
                     DOHLING</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="Group 66.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/Group 66.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">HORMIPAM
                     RUIVAH</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="player6.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player6.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">MARKO
                     LEŠKOVIĆ</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="player7.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player7.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">MILOŠ
                     DRINČIĆ</p>
@@ -100,25 +100,25 @@
     </div>
     <div class="team-container">
         <div class="team-box">
-            <img src="player8.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player8.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">NAOCHA SINGH HUIDROM</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="player9.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player9.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">PRABIR DAS</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="player10.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player10.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">PRITAM KOTAL</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="player11.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/player11.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">SORAISHAM SANDEEP SINGH</p>
             </div>
@@ -130,28 +130,28 @@
     <h2 style="margin-left: 4rem; font-size: 24px; font-family: 'Times New Roman', Times, serif;"> MID FIELDERS</h2>
     <div class="team-container">
         <div class="team-box">
-            <img src="mid1.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid1.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">ADRIÁN NICOLÁS LUNA
                     RETAMAR</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="mid2.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid2.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">BRYCE BRIAN
                     MIRANDA</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="mid3.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid3.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">DANISH FAROOQ
                     BHAT</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="mid4.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid4.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">FREDDY
                     LALLAWMAWMA</p>
@@ -160,28 +160,28 @@
     </div>
     <div class="team-container">
         <div class="team-box">
-            <img src="mid5.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid5.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">JEAKSON SINGH
                     THOUNAOJAM</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="mid6.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid6.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">MOHAMMED
                     AIMEN</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="mid6.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid6.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">MOHAMMED
                     AZHAR</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="mid7.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid7.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">SAURAV
                     MANDAL</p>
@@ -190,14 +190,14 @@
     </div>
     <div class="team-container" style="justify-content:left; margin: 2rem; ">
         <div class="team-box">
-            <img src="mid8.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid8.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">SUKHAM YOIHENBA
                     MEITEI</p>
             </div>
         </div>
         <div class="team-box" style="margin: 8px 91px ;">
-            <img src="mid9.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/mid9.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">VIBIN MOHANAN</p>
             </div>
@@ -209,28 +209,28 @@
     <h2 style="margin-left: 4rem; font-size: 24px; font-family: 'Times New Roman', Times, serif;">FORWARDS</h2>
     <div class="team-container">
         <div class="team-box">
-            <img src="forward1.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/forward1.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">BIDYASHAGAR SINGH
                     KHANGEMBAM</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="forward2.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/forward2.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">DAISUKE
                     SAKAI</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="forward3.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/forward3.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">DIMITRIOS
                     DIAMANTAKOS</p>
             </div>
         </div>
         <div class="team-box">
-            <img src="forward4.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/forward4.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">ISHAN
                     PANDITA</p>
@@ -240,21 +240,21 @@
 
     <div class="team-container" style="justify-content:left; margin: 2rem; ">
         <div class="team-box">
-            <img src="forward5.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/forward5.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;"> KWAME
                     PEPRAH</p>
             </div>
         </div>
         <div class="team-box" style="margin: 8px 91px ;">
-            <img src="forward6.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/forward6.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">NIHAL
                     SUDHEESH</p>
             </div>
         </div>
         <div class="team-box" style="margin: 8px 5px ;">
-            <img src="forward7.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/forward7.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;">RAHUL KANNOLY
                     PRAVEEN</p>
@@ -266,7 +266,7 @@
     <h2 style="margin-left: 4rem; font-size: 24px; font-family: 'Times New Roman', Times, serif;">HEAD COACH</h2>
     <div class="team-container" style="justify-content:left; margin: 2rem; ">
         <div class="team-box">
-            <img src="coach.png" alt="Player1" style="margin-top: -85px;">
+            <img src="images/coach.png" alt="Player1" style="margin-top: -85px;">
             <div class="text">
                 <p style="margin-top: 24rem; margin-left:-270px;"> KWAME
                     PEPRAH</p>
@@ -361,14 +361,14 @@
     </div>
     <h2 style="margin-left: 43rem; padding-top: 3rem; color: rgb(0, 0, 0); font-size: 26px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> FAN ZONE</h2>
     <div class="fan">
-        <img src="fan.png">
+        <img src="images/fan.png">
         <p style="margin-left: 2rem; font-size: 28px; width: 50%; margin-top: 9rem;">Hey dedicated fans! Don't miss out
             on the excitement, engage in exclusive contests and giveaways tailored for our fan community.</p>
             <button style="height: 20%; margin-top: 15rem; margin-left: -35rem;"> Click Here! </button>
     </div>
     <footer>
         <p style=" color: white; margin-left: 40em; display: flex;">&copy; 2023 Kerala Blasters FC. All rights reserved.</p>
-        <img src="LOGO.png" style=" height: 70%;">
+        <img src="images/LOGO.png" style=" height: 70%;">
         
     </footer>
 </body>
